--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Applicazione</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+<div id="loginContainer">
+    <h1>Login</h1>
+    <form id="loginForm">
+        <input type="hidden" id="csrf_token" name="csrf_token">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br><br>
 
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <button type="submit">Accedi</button>
+    </form>
+    <p id="result"></p>
+</div>
+<div id="appContent" style="display: none;">
+    <div id="navbar"></div>
+    <div id="mainContent"></div>
+</div>
+
+<script src="js/index.js"></script>
 </body>
 </html>
