--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<nav>
+    <ul>
+        <li><a href="#" data-page="home">Home</a></li>
+        <li><a href="#" data-page="inserimento-comunicazione">Inserimento Comunicazione</a></li>
+        <li><a href="#" data-page="inserimento-componente">Inserimento Componente Aggiuntivo</a></li>
+        <li><a href="#" data-page="visualizza-comunicazioni">Visualizza Comunicazioni</a></li>
+        <li><a href="#" data-page="eventi-giornalieri">Visualizza e modifica Eventi Giornalieri</a></li>
+        <li><a href="#" data-page="contatti">Contatti</a></li>
+        <li><a href="#" id="logout">Logout</a></li>
+    </ul>
+</nav>
