--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applicazione</title>
     <link rel="stylesheet" href="HTML/style.css">
+    <link rel="icon" href="img/Immagini%20Sito/FaviconITITV.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -34,7 +35,11 @@
     <div id="navbar"></div>
     <div id="mainContent"></div>
 </div>
-
+<div id="footer">
+    <p>Realizzato da Samuele Marinelli & Gabriele Bovina <br>
+        Classe 4°X A.S 2023/2024</p>
+    <img src="img/Immagini%20Sito/logoiti%20.png" alt="logoITI">
+</div>
 <script src="js/index.js"></script>
 </body>
 </html>
