--- a/HTML/Benvenuto/main.html
+++ b/HTML/Benvenuto/main.html
@@ -1,2 +1,5 @@
 <script src="js/Benvenuto/main.js"></script>
-<p>Hai effettuato l'accesso con successo all'applicazione.</p>
+<p>BENVENUTO/A <span id="BenvenutoUsername"></span>
+NELLA PAGINA DI GESTIONE DI ITI-TV! <br>
+USARE IL MENÙ SOPRA PER ACCEDERE
+ALLE FUNZIONI DI AMMINISTAZIONE </p>
