Inserimento solo delle comunicazioni nella pagina "Inserisci Comunicazione"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <h1 id="Titolo">Login</h1>
+    <h1 id="Titolo">GESTIONE INFORMAZIONI ITI-TV</h1>
     <div id="userbox" style="display: none;">
         <div id="boxInfo" style="display: none;">
             <p><span id="usernameUserbox"></span></p>
