--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -4,6 +4,7 @@
         <li><a href="#" data-page="inserimento-comunicazione">Inserimento Comunicazione</a></li>
         <li><a href="#" data-page="inserimento-componente">Inserimento Componente Aggiuntivo</a></li>
         <li><a href="#" data-page="visualizza-comunicazioni">Visualizza Comunicazioni</a></li>
+        <li><a href="#" data-page="visualizza-componenti">Visualizza Componenti Aggiuntivi</a></li>
         <li><a href="#" data-page="eventi-giornalieri">Visualizza e modifica Eventi Giornalieri</a></li>
         <li><a href="#" data-page="contatti">Contatti</a></li>
     </ul>
