Aggiornamento conclusivo delle funzionalità. Inserita la pagina per inserire dei ComponentiAggiuntivi e la pagina per visualizzare i ComponentiAggiuntivi

--- a/HTML/InserimentoComponenteAggiuntivo/main.html
+++ b/HTML/InserimentoComponenteAggiuntivo/main.html
@@ -21,6 +21,6 @@
     <input type="date" id="formDataFineComponentiAggiuntivi" name="DataFineComponentiAggiuntivi">
     <label for="formImmagineComponentiAggiuntivi">Immagine</label>
     <input type="file" id="formImmagineComponentiAggiuntivi" name="ImmagineComponentiAggiuntivi" accept="image/*">
-    <button type="submit">Invia</button>
+    <button type="submit" id="submitComponenteAggiuntivo">Invia</button>
 </div>
 <script src="js/Inserisci%20Componente%20Aggiuntivo/main.js"></script>
