--- a/HTML/VisualizzaComponentiAggiuntivi/main.html
+++ b/HTML/VisualizzaComponentiAggiuntivi/main.html
@@ -1,6 +1,6 @@
 <div id="AnteprimaEventoGiornaliero">
     <div id="boxImmagineComponentiAggiuntivi">
-        <img id="ImmagineComponentiAggiuntivi" src="#" alt="Nessuna immagine disponibile">
+        <img id="ImmagineComponentiAggiuntivi" src="#" alt="Al momento non è possibile visualizzare le immagini">
     </div>
     <div id="boxHeaderComponentiAggiuntivi">
         <div id="TitoloComponentiAggiuntivi"></div>
@@ -10,3 +10,17 @@
         <div id="ProfComponentiAggiuntivi"></div>
     </div>
 </div>
+<div id="boxTabellaComponentiAggiuntivi">
+    <table id="TabellaComponentiAggiuntivi">
+        <tr>
+            <th>Titolo</th>
+            <th>Corpo</th>
+            <th>Data Inizio</th>
+            <th>Data Fine</th>
+            <th>Docente</th>
+            <th>Azioni</th>
+        </tr>
+        <!--Riempito da JS-->
+    </table>
+</div>
+<script src="js/VisualizzaComponentiAggiuntivi/main.js"></script>
