Sistemazione bug noti

--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -71,7 +71,7 @@
 
 <nav>
     <ul>
-        <li><a href="#"  style="border-radius: 15px 0 0 15px;">Home</a></li>
+        <li><a href="#" data-page="home" style="border-radius: 15px 0 0 15px;">Home</a></li>
         <li><a href="#" data-page="inserimento-comunicazione">Inserimento  Comunicazione </a></li>
         <li><a href="#" data-page="inserimento-componente">Inserimento Componente Aggiuntivo </a></li>
         <li><a href="#" data-page="visualizza-comunicazioni">Visualizza Comunicazioni </a></li>
