--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Applicazione</title>
     <link rel="stylesheet" href="HTML/style.css">
     <link rel="icon" href="img/Immagini%20Sito/FaviconITITV.ico" type="image/x-icon">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery.js"></script>
 </head>
 <body>
 <header>
