GRafica ultimata, Aggiunta voce navbar e iniziati contatti

--- a/HTML/Benvenuto/main.html
+++ b/HTML/Benvenuto/main.html
@@ -1,5 +1,5 @@
 <script src="js/Benvenuto/main.js"></script>
-<p>BENVENUTO/A <span id="BenvenutoUsername"></span>
+<p id="welcome">BENVENUTO/A <span id="BenvenutoUsername"></span>
 NELLA PAGINA DI GESTIONE DI ITI-TV! <br>
 USARE IL MENÙ SOPRA PER ACCEDERE
 ALLE FUNZIONI DI AMMINISTAZIONE </p>
