--- a/HTML/Contatti/main.html
+++ b/HTML/Contatti/main.html
@@ -1,22 +1,24 @@
-<div id="ReferentiProgettoText">
-    <h1>Prof Referente/i del progetto</h1>
-    <table id="ReferentiProgetto">
-        <tr>
-            <th>Nome</th>
-            <th>Cognome</th>
-            <th>Email</th>
-        </tr>
-    </table>
-</div>
-<div id="ProjectManagerProgettoText">
-    <h1>Studenti Project Manager del progetto</h1>
-    <table id="ProjectManagerProgetto">
-        <tr>
-            <th>Nome</th>
-            <th>Cognome</th>
-            <th>Email</th>
-        </tr>
-    </table>
+<div class="container">
+    <div id="ReferentiProgettoText" class="side-by-side">
+        <h1>Prof Referente/i del progetto</h1>
+        <table id="ReferentiProgetto">
+            <tr>
+                <th>Nome</th>
+                <th>Cognome</th>
+                <th>Email</th>
+            </tr>
+        </table>
+    </div>
+    <div id="ProjectManagerProgettoText" class="side-by-side">
+        <h1>Studenti Project Manager del progetto</h1>
+        <table id="ProjectManagerProgetto">
+            <tr>
+                <th>Nome</th>
+                <th>Cognome</th>
+                <th>Email</th>
+            </tr>
+        </table>
+    </div>
 </div>
 
 <script src="js/Contatti/main.js"></script>
