--- a/HTML/VisualizzaComponentiAggiuntivi/main.html
+++ b/HTML/VisualizzaComponentiAggiuntivi/main.html
@@ -1,11 +1,12 @@
-<div id="AnteprimaEventoGiornaliero">
-    <div id="boxImmagineComponentiAggiuntivi">
-        <img id="ImmagineComponentiAggiuntivi" src="#" alt="Al momento non è possibile visualizzare le immagini">
-    </div>
+<div id="AnteprimaComponente">
     <div id="boxHeaderComponentiAggiuntivi">
         <div id="TitoloComponentiAggiuntivi"></div>
     </div>
+    <div id="boxImmagineComponentiAggiuntivi">
+        <img id="ImmagineComponentiAggiuntivi" src="#" alt="Al momento non è possibile visualizzare le immagini">
+    </div>
     <div id="TestoComponentiAggiuntivi"></div>
+
     <div id="boxProfComponentiAggiuntivi">
         <div id="ProfComponentiAggiuntivi"></div>
     </div>
