--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -1,12 +1,13 @@
 
 <nav>
     <ul>
-        <li><a href="#" data-page="home" style="border-radius: 15px 0 0 15px;">Home</a></li>
-        <li><a href="#" data-page="inserimento-comunicazione">Inserimento  Comunicazione </a></li>
-        <li><a href="#" data-page="inserimento-componente">Inserimento Componente Aggiuntivo </a></li>
+        <li><a href="#" data-page="home" style="border-radius: 15px 0 0 15px;padding: 20px 10px">Home</a></li>
+        <li><a href="#" data-page="inserimento-comunicazione">Nuova Comunicazione </a></li>
+        <li><a href="#" data-page="inserimento-componente">Nuovo Componente Aggiuntivo </a></li>
         <li><a href="#" data-page="visualizza-comunicazioni">Visualizza Comunicazioni </a></li>
         <li><a href="#" data-page="visualizza-componenti">Visualizza Componenti Aggiuntivi </a></li>
         <li><a href="#" data-page="eventi-giornalieri">Eventi Giornalieri</a></li>
-        <li><a href="#" data-page="contatti" style="border-radius: 0 15px 15px 0;">Contatti</a></li>
+        <li><a href="#" data-page="">Informazioni Generali</a></li>
+        <li><a href="#" data-page="contatti" style="border-radius: 0 15px 15px 0; padding: 20px 10px">Contatti</a></li>
     </ul>
 </nav>
