--- a/HTML/InserimentoComunicazione/main.html
+++ b/HTML/InserimentoComunicazione/main.html
@@ -1,23 +1,39 @@
 <div id="FormInserimentoComunicazione">
-    <label for="TagComunicazione">TAG</label>
-    <select id="TagComunicazione">
-        <option value="niente">Seleziona un opzione</option>
-        <option value="Comunicazione">Comunicazione</option>
-        <option value="News">News</option>
-        <option value="Emergenza">Emergenza</option>
-    </select>
-    <label for="NumeroComunicazione" id="labelNumeroComunicazione">Numero</label>
-    <input type="number" id="NumeroComunicazione" required min="1" max="9999">
-    <label for="TitoloComunicazione" id="labelTitoloComunicazione">0/55</label>
+    <div class="form-group">
+        <label for="TagComunicazione" id="TagComunicazioneLabel">TAG</label>
+        <select id="TagComunicazione">
+            <option value="niente">Seleziona un opzione</option>
+            <option value="Comunicazione">Comunicazione</option>
+            <option value="News">News</option>
+            <option value="Emergenza">Emergenza</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label for="NumeroComunicazione" id="labelNumeroComunicazione">Numero</label>
+        <input type="number" id="NumeroComunicazione" required min="1" max="9999">
+    </div>
+
     <input type="text" id="TitoloComunicazione" max="55" min="1" placeholder="Titolo">
+    <label for="TitoloComunicazione" id="labelTitoloComunicazione">0/55</label>
+
+    <textarea id="CorpoComunicazione" max="300" min="1" placeholder="Corpo" ></textarea>
     <label for="CorpoComunicazione" id="labelCorpoComunicazione">0/300</label>
-    <input type="text" id="CorpoComunicazione" max="300" min="1" placeholder="Corpo">
-    <label for="DataInizioComunicazione">Data Inizio</label>
-    <input type="date" id="DataInizioComunicazione" required>
-    <label for="DataFineComunicazione">Data Fine</label>
-    <input type="date" id="DataFineComunicazione" required>
-    <div id="Azioni">Azioni</div>
-    <button id="InserisciComunicazione">+</button>
+
+    <div class="form-group">
+        <label for="DataInizioComunicazione" id="labelDataInizioComunicazione">Data Inizio</label>
+        <input type="date" id="DataInizioComunicazione" required>
+    </div>
+
+    <div class="form-group">
+        <label for="DataFineComunicazione" id="labelDataFineComunicazione">Data Fine</label>
+        <input type="date" id="DataFineComunicazione" required>
+    </div>
+
+    <div class="form-group">
+        <div id="Azioni">Azioni</div>
+        <button id="InserisciComunicazione"><img src="img/UI/add.png"></button>
+    </div>
 </div>
 <div id="BoxTestoAnteprimaComunicazione">Anteprima Comunicazione</div>
 <div id="AnteprimaComunicazione">
