--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -7,7 +7,7 @@
         <li><a href="#" data-page="visualizza-comunicazioni">Visualizza Comunicazioni </a></li>
         <li><a href="#" data-page="visualizza-componenti">Visualizza Componenti Aggiuntivi </a></li>
         <li><a href="#" data-page="eventi-giornalieri">Eventi Giornalieri</a></li>
-        <li><a href="#" data-page="">Informazioni Generali</a></li>
+        <li><a href="#" data-page="informazioni-generali">Informazioni Generali</a></li>
         <li><a href="#" data-page="contatti" style="border-radius: 0 15px 15px 0; padding: 20px 10px">Contatti</a></li>
     </ul>
 </nav>
