Creazione pagina Visualizza o Modifica Eventi Giornalieri

--- a/HTML/VisualizzaModificaEventiGiornalieri/main.html
+++ b/HTML/VisualizzaModificaEventiGiornalieri/main.html
@@ -1,1 +1,26 @@
-Pagina al momento non disponibile
+<div id="AnteprimamodificaEventiGiornalieri">
+    <div id="boxHeadermodificaEventiGiornalieri">
+        <div id="TitolomodificaEventiGiornalieri"></div>
+    </div>
+    <div id="boxImmaginemodificaEventiGiornalieri">
+        <img id="ImmaginemodificaEventiGiornalieri" src="#" alt="Al momento non è possibile visualizzare le immagini">
+    </div>
+    <div id="TestomodificaEventiGiornalieri"></div>
+
+    <div id="boxProfmodificaEventiGiornalieri">
+        <div id="ProfmodificaEventiGiornalieri"></div>
+    </div>
+</div>
+<div id="boxTabellamodificaEventiGiornalieri">
+    <table id="TabellamodificaEventiGiornalieri">
+        <tr>
+            <th>Titolo</th>
+            <th>Corpo</th>
+            <th>Data Inizio</th>
+            <th>Data Fine</th>
+            <th>Docente</th>
+            <th>Azioni</th>
+        </tr>
+        <!--Riempito da JS-->
+    </table>
+</div>
