--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -48,8 +48,8 @@
     }
 
     #hamburgerButton {
-        position: fixed;
-        top: 20px;
+        position: absolute;
+        top: -20px;
         right: 20px;
         background: transparent;
         border: none;
@@ -63,7 +63,7 @@
     .collapse.show {
         background-color: rgba(0, 0, 0, 0.9);
         /* Sfondo scuro quando il menu è visibile */
-        position: fixed;
+        position: absolute;
         top: 60px;
         right: 20px;
         width: 100vw;
@@ -147,9 +147,9 @@
         }
 
         #hamburgerButton {
-            position: fixed;
-            top: 70px;
-            right: 10px;
+            position: absolute;
+            top: -52px;
+            right: 90px;
             background: transparent;
             border: none;
         }
@@ -160,9 +160,9 @@
 
         .collapse.show {
             background-color: rgba(0, 0, 0, 0.9);
-            position: fixed;
-            top: 60px;
-            right: 20px;
+            position: absolute;
+            top: 0px;
+            right: 80px;
             width: 200px;
             /* Imposta la larghezza del menu per schermi piccoli */
             transform: translateX(100%);
@@ -174,6 +174,66 @@
         .collapse.show.show-menu {
             transform: translateX(0);
             /* Mostra il menu quando è visibile */
+        }
+
+        .nav-link {
+            /* Rettangoli con bordo nero sottile */
+            border: 1px solid black;
+            border-radius: 0px;
+
+        }
+
+        /* altezza massima del menu */
+        .navbar-expand-lg .navbar-collapse {
+            max-height: 70vh;
+            overflow-y: auto;
+            gap: 0px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        #hamburgerButton {
+            position: absolute;
+            top: -47px;
+            right: 60px;
+            background: transparent;
+            border: none;
+        }
+
+        .collapse.show {
+            background-color: rgba(0, 0, 0, 0.9);
+            position: absolute;
+            top: 0px;
+            right: 50px;
+            width: 200px;
+            /* Imposta la larghezza del menu per schermi piccoli */
+            transform: translateX(100%);
+            /* Nascondi il menu inizialmente */
+            transition: transform 0.3s ease;
+            /* Transizione per effetto slide-in */
+        }
+    }
+
+    @media (max-width: 576px) {
+        #hamburgerButton {
+            position: absolute;
+            top: -45px;
+            right: 50px;
+            background: transparent;
+            border: none;
+        }
+
+        .collapse.show {
+            background-color: rgba(0, 0, 0, 0.9);
+            position: absolute;
+            top: 0px;
+            right: 40px;
+            width: 200px;
+            /* Imposta la larghezza del menu per schermi piccoli */
+            transform: translateX(100%);
+            /* Nascondi il menu inizialmente */
+            transition: transform 0.3s ease;
+            /* Transizione per effetto slide-in */
         }
     }
 </style>
