--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" data-page="home">Home</a>
+                    <a class="nav-link active" href="#" data-page="home" id="home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" data-page="inserimento-comunicazione">Nuova Comunicazione</a>
@@ -44,7 +44,7 @@
         width: 100%;
         background-color: #005cd7;
         /* Sfondo della navbar per schermi grandi */
-        z-index: 1000;
+        z-index: 1;
     }
 
     #hamburgerButton {
@@ -101,9 +101,10 @@
         /* Occupa tutta la larghezza del menu */
     }
 
-    .nav-item {
-        flex: 1;
-        /* Ogni bottone occupa lo spazio equamente */
+    /*larghezza dei bottoni equivalente alla quantità di caratteri*/
+    .nav-link {
+        width: 100%;
+        /* Larghezza del bottone riempie la colonna */
     }
 
     .nav-link {
@@ -123,7 +124,7 @@
         text-decoration: none;
         width: 100%;
         /* Larghezza del bottone riempie la colonna */
-        height: 80px;
+        height: 60px;
         /* Altezza del bottone */
         box-sizing: border-box;
     }
