--- a/index.html
+++ b/index.html
@@ -61,9 +61,28 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             /* Ombra per un effetto elevato */
             cursor: pointer;
-            z-index: 1;
+            z-index: 2;
             border-radius: 50%;
             border: white 2px solid;
+        }
+
+        #boxInfo {
+            position: absolute;
+            top: 60px;
+            /* Distanza dal bordo superiore */
+            right: 10px;
+            /* Distanza dal bordo destro */
+            background-color: #004996;
+            /* Colore di sfondo */
+            color: white;
+            /* Colore del testo */
+            padding: 1rem;
+            border-radius: 5px;
+            display: none;
+            /* Inizialmente nascosto */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            /* Ombra per un effetto elevato */
+
         }
 
         .normalUserBox {
@@ -116,6 +135,11 @@
                 height: 40px;
                 padding: 1rem;
             }
+
+            #boxInfo {
+                top: 50px;
+                right: 11px;
+            }
         }
 
         /* Riduci ulteriormente il font su schermi molto piccoli */
@@ -132,6 +156,11 @@
                 width: 30px;
                 height: 30px;
                 padding: 1rem;
+            }
+
+            #boxInfo {
+                top: 40px;
+                right: 10px;
             }
         }
 
@@ -271,8 +300,8 @@
 
     <!-- Footer -->
     <footer>
-        <img src="img/Immagini Sito/logoiti .png" alt="Image 1" class="left">
-        <p>Realizzato da Samuele Marinelli & Gabriele Bovina <br> Classe 4°X A.S 2023/2024</p>
+        <p>Realizzato da Samuele Marinelli & Gabriele Bovina <br> Classe 5°X A.S 2024/2025</p>
+        <img src="img/Immagini Sito/logoiti .png" alt="Image 1" class="right">
         <img src="img/Immagini Sito/logoITITV.png" alt="Image 2" class="right">
     </footer>
 
