--- a/HTML/InformazioniGenerali/main.html
+++ b/HTML/InformazioniGenerali/main.html
@@ -1,1 +1,10 @@
-PAGINA NON DISPONIBILE
+<div class="NonDisponibile">PAGINA NON DISPONIBILE</div>
+
+<style>
+    .NonDisponibile {
+        font-size: 30px;
+        text-align: center;
+        margin-top: 100px;
+        color: white;
+    }
+</style>
