--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /*importo font*/
+
+        @font-face {
+            font-family: 'Outfit';
+            src: url('Fonts/OutFit/Outfit-VariableFont_wght.ttf') format('truetype');
+        }
+
+        * {
+            font-family: 'Outfit';
+        }
+
         /* Header */
         header {
             background-color: #004996;
@@ -220,6 +231,7 @@
             display: none;
             width: 100%;
             background-color: #04326f;
+            margin-bottom: 9rem;
         }
 
 
@@ -241,7 +253,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            position: relative;
+            /* metto il footer sotto ai contenuti anche quando cambuio la pagina */
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
 
         footer p {
@@ -260,6 +275,12 @@
 
         footer img.right {
             margin-left: auto;
+        }
+
+        .minimizzato {
+            width: 0px;
+            height: 0px;
+            display: none;
         }
     </style>
 </head>
@@ -283,7 +304,7 @@
     </div>
 
     <!-- Main -->
-    <main>
+    <main id="mainContentLogin">
         <div class="login-box" id="loginContainer">
             <form id="loginForm">
                 <input type="hidden" id="csrf_token" name="csrf_token">
