Update styles in HTML pages and fix typo in main.html

--- a/HTML/Benvenuto/main.html
+++ b/HTML/Benvenuto/main.html
@@ -2,7 +2,7 @@
 <p id="welcome">BENVENUTO/A <span id="BenvenutoUsername"></span>
     NELLA PAGINA DI GESTIONE DI ITI-TV! <br>
     USARE IL MENÙ SOPRA PER ACCEDERE
-    ALLE FUNZIONI DI AMMINISTAZIONE </p>
+    ALLE FUNZIONI DI AMMINISTRAZIONE </p>
 
 <style>
     #welcome {
