--- a/HTML/InserimentoComunicazione/main.html
+++ b/HTML/InserimentoComunicazione/main.html
@@ -1,66 +1,230 @@
-<div id="FormInserimentoComunicazione">
-    <div class="form-group">
-        <label for="TagComunicazione" id="TagComunicazioneLabel">TAG</label>
-        <select id="TagComunicazione">
-            <option value="niente">Seleziona un opzione</option>
-            <option value="Comunicazione">Comunicazione</option>
-            <option value="News">News</option>
-            <option value="Emergenza">Emergenza</option>
-        </select>
-    </div>
+<div class="container-fluid">
+    <div class="row">
+        <!-- Form di Inserimento -->
+        <div id="FormInserimentoComunicazione" class="col-lg-4 col-md-12">
+            <div class="form-group">
+                <label for="TagComunicazione" id="TagComunicazioneLabel">TAG</label>
+                <select id="TagComunicazione" class="form-control">
+                    <option value="niente">Seleziona un'opzione</option>
+                    <option value="Comunicazione">Comunicazione</option>
+                    <option value="News">News</option>
+                    <option value="Emergenza">Emergenza</option>
+                </select>
+            </div>
 
-    <div class="form-group">
-        <label for="NumeroComunicazione" id="labelNumeroComunicazione">Numero</label>
-        <input type="number" id="NumeroComunicazione" required min="1" max="9999">
-    </div>
+            <div class="form-group">
+                <label for="NumeroComunicazione" id="labelNumeroComunicazione">Numero</label>
+                <input type="number" id="NumeroComunicazione" class="form-control" required min="1" max="9999">
+            </div>
 
-    <input type="text" id="TitoloComunicazione" max="55" min="1" placeholder="Titolo">
-    <label for="TitoloComunicazione" id="labelTitoloComunicazione">0/55</label>
+            <br>
+            <input type="text" id="TitoloComunicazione" class="form-control" max="55" min="1" placeholder="Titolo">
+            <label for="TitoloComunicazione" id="labelTitoloComunicazione">0/55</label>
+            <br>
+            <textarea id="CorpoComunicazione" class="form-control" max="300" min="1" placeholder="Corpo"></textarea>
+            <label for="CorpoComunicazione" id="labelCorpoComunicazione">0/300</label>
 
-    <textarea id="CorpoComunicazione" max="300" min="1" placeholder="Corpo" ></textarea>
-    <label for="CorpoComunicazione" id="labelCorpoComunicazione">0/300</label>
+            <div class="form-group">
+                <label for="DataInizioComunicazione" id="labelDataInizioComunicazione">Data Inizio</label>
+                <input type="date" id="DataInizioComunicazione" class="form-control" required>
+            </div>
 
-    <div class="form-group">
-        <label for="DataInizioComunicazione" id="labelDataInizioComunicazione">Data Inizio</label>
-        <input type="date" id="DataInizioComunicazione" required>
-    </div>
+            <div class="form-group">
+                <label for="DataFineComunicazione" id="labelDataFineComunicazione">Data Fine</label>
+                <input type="date" id="DataFineComunicazione" class="form-control" required>
+            </div>
 
-    <div class="form-group">
-        <label for="DataFineComunicazione" id="labelDataFineComunicazione">Data Fine</label>
-        <input type="date" id="DataFineComunicazione" required>
-    </div>
+            <div class="form-group">
+                <div id="Azioni">Azioni</div>
+                <button id="InserisciComunicazione" class="btn btn-primary"><img src="img/UI/add.png"
+                        alt="Inserisci"></button>
+            </div>
+        </div>
 
-    <div class="form-group">
-        <div id="Azioni">Azioni</div>
-        <button id="InserisciComunicazione"><img src="img/UI/add.png"></button>
-    </div>
-</div>
-<div id="BoxTestoAnteprimaComunicazione">Anteprima Comunicazione</div>
-<div id="AnteprimaComunicazione">
-    <div id="HeadComunicazioneAnteprima">
-        <div id="NumeroComunicazioneAnteprima"></div>
-        <div id="DivisoreNumeroTitoloComunicazioneAnteprima"></div>
-        <div id="TitoloComunicazioneAnteprima"></div>
-    </div>
-    <div id="MainComunicazioneAnteprima">
-        <div id="CorpoComunicazioneAnteprima"></div>
-    </div>
-    <div id="FooterComunicazioneAnteprima">
-        <div id="FirmaComunicazioneAnteprima"></div>
-    </div>
-</div>
-<div id="BoxTestoUltimaComunicazione">Ultima Comunicazione</div>
-<div id="UltimaComunicazione">
-    <div id="HeadUltimaComunicazione">
-        <div id="NumeroUltimaComunizazione"></div>
-        <div id="DivisoreNumeroTitoloUltimaComunicazione"></div>
-        <div id="TitoloUltimaComunicazione"></div>
-    </div>
-    <div id="MainUltimaComunicazione">
-        <div id="CorpoUltimaComunicazione"></div>
-    </div>
-    <div id="FooterUltimaComunicazione">
-        <div id="FirmaUltimaComunicazione"></div>
+        <!-- Box Anteprima Comunicazione -->
+        <div class="col-lg-4 col-md-12" id="BoxAnteprimaComunicazione">
+            <div id="BoxTestoAnteprimaComunicazione">Anteprima Comunicazione</div>
+            <div id="AnteprimaComunicazione" class="d-flex flex-column justify-content-between">
+                <div id="HeadComunicazioneAnteprima" class="d-flex">
+                    <div id="NumeroComunicazioneAnteprima" class="d-flex justify-content-center align-items-center">
+                        123
+                    </div>
+                    <div id="DivisoreNumeroTitoloComunicazioneAnteprima"></div>
+                    <div id="TitoloComunicazioneAnteprima" class="d-flex align-items-center justify-content-center">
+                        Titolo
+                    </div>
+                </div>
+                <div id="MainComunicazioneAnteprima" class="flex-grow-1">
+                    <div id="CorpoComunicazioneAnteprima">
+                        Testo della comunicazione in anteprima.
+                    </div>
+                </div>
+                <div id="FooterComunicazioneAnteprima">
+                    <div id="FirmaComunicazioneAnteprima">Firma</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Box Ultima Comunicazione -->
+        <div class="col-lg-4 col-md-12" id="BoxUltimaComunicazione">
+            <div id="BoxTestoUltimaComunicazione">Ultima Comunicazione</div>
+            <div id="UltimaComunicazione" class="d-flex flex-column justify-content-between">
+                <div id="HeadUltimaComunicazione" class="d-flex">
+                    <div id="NumeroUltimaComunizazione" class="d-flex justify-content-center align-items-center">
+                        456
+                    </div>
+                    <div id="DivisoreNumeroTitoloUltimaComunicazione"></div>
+                    <div id="TitoloUltimaComunicazione" class="d-flex align-items-center justify-content-center">
+                        Titolo Ultima Comunicazione
+                    </div>
+                </div>
+                <div id="MainUltimaComunicazione" class="flex-grow-1">
+                    <div id="CorpoUltimaComunicazione">
+                        Testo dell'ultima comunicazione.
+                    </div>
+                </div>
+                <div id="FooterUltimaComunicazione">
+                    <div id="FirmaUltimaComunicazione">Firma Ultima Comunicazione</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script src="js/Inserisci%20Comunicazione/main.js"></script>
+<style>
+    /* Stili personalizzati per i box */
+    #FormInserimentoComunicazione {
+        padding: 20px;
+        background-color: #f8f9fa;
+        border: 1px solid #dee2e6;
+        border-radius: 8px;
+        height: 100%;
+    }
+
+    #AnteprimaComunicazione,
+    #UltimaComunicazione {
+        background-color: transparent;
+        border: 1px solid #f8f9fa;
+        border-radius: 8px;
+        height: 100%;
+    }
+
+    #NumeroComunicazione,
+    #TitoloComunicazione,
+    #CorpoComunicazione,
+    #DataInizioComunicazione,
+    #DataFineComunicazione,
+    #InserisciComunicazione {
+        pointer-events: none;
+    }
+
+    #BoxTestoAnteprimaComunicazione,
+    #BoxTestoUltimaComunicazione {
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+
+    #BoxAnteprimaComunicazione,
+    #BoxUltimaComunicazione {
+        padding: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        background-color: transparent;
+        border: 0;
+        border-radius: 8px;
+    }
+
+    /* Gestione delle intestazioni e corpo delle comunicazioni */
+    #HeadComunicazioneAnteprima,
+    #HeadUltimaComunicazione {
+        width: 100%;
+        height: 100px;
+        background-color: #004996;
+        border-bottom: 2px solid #33B4FE;
+        border-radius: 15px 15px 0 0;
+        align-items: center;
+    }
+
+    #NumeroComunicazioneAnteprima,
+    #NumeroUltimaComunizazione {
+        width: 115px;
+        height: 63px;
+        color: #FFF;
+        text-align: center;
+        font-size: 50px;
+        font-weight: 700;
+        background-color: transparent;
+        flex-shrink: 0;
+    }
+
+    #DivisoreNumeroTitoloComunicazioneAnteprima,
+    #DivisoreNumeroTitoloUltimaComunicazione {
+        width: 3px;
+        height: 85px;
+        background: #FFF;
+        flex-shrink: 0;
+    }
+
+    #TitoloComunicazioneAnteprima,
+    #TitoloUltimaComunicazione {
+        color: #FFF;
+        text-align: center;
+        font-size: 25px;
+        flex-grow: 1;
+        word-break: break-word;
+        /* Spezza le parole lunghe per andare a capo */
+        overflow-wrap: break-word;
+        /* Assicura che il contenuto non esca dal box */
+    }
+
+    #MainComunicazioneAnteprima,
+    #MainUltimaComunicazione {
+        padding: 20px;
+        background-color: #333;
+        color: #FFF;
+        font-size: 18px;
+        text-align: justify;
+        word-break: break-word;
+        /* Spezza le parole lunghe per andare a capo */
+        overflow-wrap: break-word;
+        /* Assicura che il contenuto non esca dal box */
+    }
+
+    #FooterComunicazioneAnteprima,
+    #FooterUltimaComunicazione {
+        height: 40px;
+        background-color: #233284;
+        border-radius: 0 0 15px 15px;
+        border-top: 5px solid #0E284B;
+        text-align: left;
+        padding-left: 20px;
+        color: #FFF;
+    }
+
+    /* Responsività */
+    @media (max-width: 992px) {
+
+        #FormInserimentoComunicazione,
+        #AnteprimaComunicazione,
+        #UltimaComunicazione {
+            padding-bottom: 20px;
+            padding-top: 20px;
+        }
+    }
+
+    /* Overflow gestione per schermi molto piccoli */
+    @media (max-width: 768px) {
+
+        #AnteprimaComunicazione,
+        #UltimaComunicazione {
+            overflow-x: auto;
+        }
+
+        #FormInserimentoComunicazione,
+        #AnteprimaComunicazione,
+        #UltimaComunicazione {
+            padding-bottom: 20px;
+            padding-top: 20px;
+        }
+    }
+</style>
