--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -56,6 +56,7 @@
         z-index: 1000;
     }
 
+
     .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }
@@ -86,7 +87,7 @@
         display: flex;
         justify-content: center;
         width: 100%;
-        max-width: 2000px;
+        max-width: 999999999999999999999999999999999999999999px;
         /* Centra i bottoni nella navbar */
     }
 
@@ -105,7 +106,9 @@
     .nav-link {
         width: 100%;
         /* Larghezza del bottone riempie la colonna */
+
     }
+
 
     .nav-link {
         color: white !important;
@@ -138,6 +141,12 @@
     .nav-link.active {
         background-color: #479bff;
         /* Sfondo del bottone attivo */
+    }
+
+    @media (min-width: 1400px) {
+        .nav-item {
+            flex: 1;
+        }
     }
 
     /* Navbar per schermi piccoli */
