--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             font-family: 'Outfit';
         }
 
+        /*import immagini*/
+        .navbar-toggler-icon {
+            background-image: url("img/UI/hamburger.png");
+        }
+
         /* Header */
         header {
             background-color: #004996;
@@ -84,7 +89,7 @@
             /* Distanza dal bordo superiore */
             right: 10px;
             /* Distanza dal bordo destro */
-            background-color: #004996;
+            background-color: #479CFF;
             /* Colore di sfondo */
             color: white;
             /* Colore del testo */
@@ -106,6 +111,8 @@
 
         .userboxClicked {
             background-image: url(img/UI/user-hover.png);
+            background-color: #479CFF;
+            
             /* adatto l'immagine alla dimansione del box */
             width: 100px;
             height: 100px;
@@ -123,6 +130,9 @@
             margin-top: 1rem;
             text-decoration: underline;
         }
+        #logout:hover{
+            color: #FF2626;
+        } 
 
 
         /* Su schermi piccoli, sposta il titolo a sinistra */
